# any_mpsc

./: Cargo.toml  README.md
src/: buffered_receiver.rs  lib.rs
